syntax = "proto3";

option java_multiple_files = true;
option java_package = "ovaphlow.himawari.service.misc";

import "reply.proto";

package misc;

service Message {
    rpc Save (SaveMessageRequest) returns (Reply) {}
    rpc List (ListMessageRequest) returns (Reply) {}
    rpc MarkRead (MarkMessageReadRequest) returns (Reply) {}
}

message SaveMessageRequest {
    string uuid = 1;
    int32 user_id = 2;
    string doc = 3;
}

message ListMessageRequest {
    int32 user_id = 1;
    string status = 2;
}

message MarkMessageReadRequest {
    int32 id = 1;
    string uuid = 2;
}
